--- a/Tratamento de Dados Geoespaciais/Tasks/main.ipynb
+++ b/Tratamento de Dados Geoespaciais/Tasks/main.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import geopandas, osmnx"
@@ -111,23 +115,27 @@
     "\n",
     " #### Faça um mapa dos bairros de Liverpool que inclua as seguintes características:\n",
     "\n",
-    "*Apresenta um título*\n",
+    "* **Apresenta um título**\n",
     "\n",
-    "*Não inclui quadro de eixos*\n",
+    "* **Não inclui quadro de eixos**\n",
     "\n",
-    "*Tem um tamanho de figura de 10 por 11*\n",
+    "* **Tem um tamanho de figura de 10 por 11**\n",
     "\n",
-    "*Os polígonos são todos na cor \"#525252\" e 50% transparentes*\n",
+    "* **Os polígonos são todos na cor \"#525252\" e 50% transparentes**\n",
     "\n",
-    "*As linhas de contorno (\"bordas\") têm uma largura de 0,3 e são da cor \"#B9EBE3\"*\n",
+    "* **As linhas de contorno (\"bordas\") têm uma largura de 0,3 e são da cor \"#B9EBE3\"**\n",
     "\n",
-    "*Inclui um mapa base com o tema aquarela Stamen*\n"
+    "* **Inclui um mapa base com o tema aquarela Stamen**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import geopandas\n",
@@ -138,8 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -147,7 +159,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -165,13 +177,18 @@
    "source": [
     "# Mapa de Liverpool, com seus respectivos bairros\n",
     "\n",
+    "neighbourhoods = geopandas.read_file( \"data/Census_Residential_Data_Pack_2011/Local_Authority_Districts/E08000012/shapefiles/E08000012.shp\" )\n",
     "neighbourhoods.plot( color=\"white\", edgecolor=\"black\", linewidth=0.5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -195,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
